implemented zooming and panning. need to think about things like a zooming limit

--- a/example.html
+++ b/example.html
@@ -12,14 +12,17 @@
     <body onload="init()">
         <div style="text-align: center">
             <div id="buttons">
-                <a href="#" id="trac_btn" class="myButton">Traction</a>
-                <a href="#" id="disp_btn" class="myButton">Displacement</a>
-                <a href="#" id="ct_btn" class="myButton">Crack Traction</a>
-                <a href="#" id="cd_btn" class="myButton">Crack Displacement</a>
+                <a href="#" id="trac_btn" class="myButton">Traction (t)</a>
+                <a href="#" id="disp_btn" class="myButton">Displacement (d)</a>
+                <a href="#" id="ct_btn" class="myButton">Crack Traction (c)</a>
+                <a href="#" id="cd_btn" class="myButton">Crack Displacement (f)</a>
                 <a href="#" id="comp_btn" class="myButton">Compute</a>
                 <a href="#" id="img_btn" class="myButton">Background</a>
-                <a href="#" id="save_btn" class="myButton">Save</a>
-                <a href="#" id="load_btn" class="myButton">Load</a>
+                <a href="#" id="zoomIn_btn" class="myButton">Zoom In</a>
+                <a href="#" id="zoomOut_btn" class="myButton">Zoom Out</a>
+                <a href="#" id="pan_btn" class="myButton">Pan (p)</a>
+                <a href="#" id="save_btn" class="myButton">Save (s)</a>
+                <a href="#" id="load_btn" class="myButton">Load (l)</a>
             </div>
         </div>
 <!--         currently not needed since we're not explicitly entering values -->
