fixed point snapping bug when moving/zooming, implementing degree snapping for crack traction and crack displacement

--- a/example.html
+++ b/example.html
@@ -17,6 +17,7 @@
                 <a href="#" id="ct_btn" class="myButton">Crack Traction (c)</a>
                 <a href="#" id="cd_btn" class="myButton">Crack Displacement (f)</a>
                 <a href="#" id="comp_btn" class="myButton">Compute</a>
+                <a href="#" id="edit_gp_btn" class="myButton">Edit Group (e)</a>
                 <a href="#" id="img_btn" class="myButton">Background</a>
                 <a href="#" id="zoomIn_btn" class="myButton">Zoom In</a>
                 <a href="#" id="zoomOut_btn" class="myButton">Zoom Out</a>
