started factoring code, fixed bug with point snapping, allow editing of individual components

--- a/example.html
+++ b/example.html
@@ -7,6 +7,8 @@
         <script src="jquery-2.1.1.js"></script>
         <script src="fabricjs.js"></script>
         <script src="main.js"></script>
+        <script src="exploration.js"></script>
+        <script src="csv.js"></script>
         <script src="jquery.csv-0.71.min.js"></script>
     </head>
     <body onload="init()">
@@ -18,6 +20,7 @@
                 <a href="#" id="cd_btn" class="myButton">Crack Displacement (f)</a>
                 <a href="#" id="comp_btn" class="myButton">Compute</a>
                 <a href="#" id="edit_gp_btn" class="myButton">Edit Group (e)</a>
+                <a href="#" id="regp_btn" class="myButton">Regroup (g)</a>
                 <a href="#" id="img_btn" class="myButton">Background</a>
                 <a href="#" id="zoomIn_btn" class="myButton">Zoom In</a>
                 <a href="#" id="zoomOut_btn" class="myButton">Zoom Out</a>
